{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 20,
  "lineage": "00ed9f47-3a21-1914-fd7d-66e494233615",
  "resources": [
    {
      "module": "module.modules.module.eip-module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "CustomEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f2c3697764a63cb",
            "association_id": "eipassoc-067edf4f9f943ddae",
            "domain": "vpc",
            "id": "eipalloc-07f2c3697764a63cb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04eaccf56717e76ac",
            "private_dns": "ip-10-0-0-166.ec2.internal",
            "private_ip": "10.0.0.166",
            "public_dns": "ec2-34-230-110-66.compute-1.amazonaws.com",
            "public_ip": "34.230.110.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Custom Elastic IP"
            },
            "tags_all": {
              "Name": "Custom Elastic IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.modules.module.igw-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979226761050:internet-gateway/igw-08b1e2439710ba0f9",
            "id": "igw-08b1e2439710ba0f9",
            "owner_id": "979226761050",
            "tags": {
              "Name": "VPC-IGW"
            },
            "tags_all": {
              "Name": "VPC-IGW"
            },
            "vpc_id": "vpc-015430711bafb8ffd"
          },
          "dependencies": [
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.modules.module.natgateway-module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f2c3697764a63cb",
            "connectivity_type": "public",
            "id": "nat-0d30d4c295f808e77",
            "network_interface_id": "eni-04eaccf56717e76ac",
            "private_ip": "10.0.0.166",
            "public_ip": "34.230.110.66",
            "subnet_id": "subnet-00a764ef3506c7f03",
            "tags": {
              "Name": "GW NAT"
            },
            "tags_all": {
              "Name": "GW NAT"
            }
          },
          "dependencies": [
            "module.modules.module.eip-module.aws_eip.CustomEIP",
            "module.modules.module.subnets.aws_subnet.vpc-subnets",
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.modules.module.routtable-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979226761050:route-table/rtb-0508957c32b530c59",
            "id": "rtb-0508957c32b530c59",
            "owner_id": "979226761050",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d30d4c295f808e77",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-015430711bafb8ffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modules.module.eip-module.aws_eip.CustomEIP",
            "module.modules.module.natgateway-module.aws_nat_gateway.nat-01",
            "module.modules.module.subnets.aws_subnet.vpc-subnets",
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.modules.module.routtable-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979226761050:route-table/rtb-003008e56b8cea7bc",
            "id": "rtb-003008e56b8cea7bc",
            "owner_id": "979226761050",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08b1e2439710ba0f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-015430711bafb8ffd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modules.module.igw-module.aws_internet_gateway.igw-01",
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.modules.module.routtable-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0265f07b1784282ad",
            "route_table_id": "rtb-0508957c32b530c59",
            "subnet_id": "subnet-0ba153a802f9bb5ed"
          },
          "dependencies": [
            "module.modules.module.eip-module.aws_eip.CustomEIP",
            "module.modules.module.natgateway-module.aws_nat_gateway.nat-01",
            "module.modules.module.routtable-module.aws_route_table.private-rt",
            "module.modules.module.subnets.aws_subnet.vpc-subnets",
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.modules.module.routtable-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e221bb08d8eb6b1",
            "route_table_id": "rtb-0508957c32b530c59",
            "subnet_id": "subnet-069c1528a1a5650d9"
          },
          "dependencies": [
            "module.modules.module.eip-module.aws_eip.CustomEIP",
            "module.modules.module.natgateway-module.aws_nat_gateway.nat-01",
            "module.modules.module.routtable-module.aws_route_table.private-rt",
            "module.modules.module.subnets.aws_subnet.vpc-subnets",
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.modules.module.routtable-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d934011469c8c3c1",
            "route_table_id": "rtb-003008e56b8cea7bc",
            "subnet_id": "subnet-00a764ef3506c7f03"
          },
          "dependencies": [
            "module.modules.module.igw-module.aws_internet_gateway.igw-01",
            "module.modules.module.routtable-module.aws_route_table.public-rt",
            "module.modules.module.subnets.aws_subnet.vpc-subnets",
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.modules.module.routtable-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03049a2cacce25b17",
            "route_table_id": "rtb-003008e56b8cea7bc",
            "subnet_id": "subnet-00d510c3351951ff6"
          },
          "dependencies": [
            "module.modules.module.igw-module.aws_internet_gateway.igw-01",
            "module.modules.module.routtable-module.aws_route_table.public-rt",
            "module.modules.module.subnets.aws_subnet.vpc-subnets",
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.modules.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979226761050:subnet/subnet-00a764ef3506c7f03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a764ef3506c7f03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979226761050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-015430711bafb8ffd"
          },
          "dependencies": [
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979226761050:subnet/subnet-00d510c3351951ff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d510c3351951ff6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979226761050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-015430711bafb8ffd"
          },
          "dependencies": [
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979226761050:subnet/subnet-0ba153a802f9bb5ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba153a802f9bb5ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979226761050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-015430711bafb8ffd"
          },
          "dependencies": [
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979226761050:subnet/subnet-069c1528a1a5650d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069c1528a1a5650d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979226761050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-015430711bafb8ffd"
          },
          "dependencies": [
            "module.modules.module.vpc-module.aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "module": "module.modules.module.vpc-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979226761050:vpc/vpc-015430711bafb8ffd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07cde83f0eb246db6",
            "default_route_table_id": "rtb-0cac29807c9a7b866",
            "default_security_group_id": "sg-049eb6a4d8de10fcd",
            "dhcp_options_id": "dopt-08e1d4ec3a86ceec8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015430711bafb8ffd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cac29807c9a7b866",
            "owner_id": "979226761050",
            "tags": {
              "Name": "VPC Dev"
            },
            "tags_all": {
              "Name": "VPC Dev"
            }
          }
        }
      ]
    }
  ]
}